--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -1,3 +1,3 @@
-<p *ngIf="product.price > 700">
-  <button>Notify Me</button>
+<p *ngIf="product.price > 50">
+  <button (click)="notify.emit()">Notify Me</button>
 </p>
