--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,4 +5,8 @@
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
 
+  <!-- to buy produtc -->
+
+  <button (click)="addToCart(product)">Buy</button>
+
 </div>
